# brother-scand

./: .gitmodules  CMakeLists.txt  LICENSE.md  Makefile  README.md  ber.c  ber.h  brother-scand.service  brscand.ufw_profile  button_handler.c  button_handler.h  con_queue.c  con_queue.h  concurrent_queue.c  concurrent_queue.h  config.c  config.h  connection.c  connection.h  connection_base_test.h  connection_test.cpp  data_channel.c  data_channel.h  data_channel_test.cpp  device_handler.c  device_handler.h  device_handler_test.cpp  event_thread.c  event_thread.h  iputils.c  iputils.h  log.c  log.h  main.c  network.c  network.h  rle_to_tiff.py  scanner_cli.c  snmp.c  snmp.h  (+1 more)
testdata/: brother.config  scan0.rle
